--- a/dashboard.html
+++ b/dashboard.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="style/grid.css" type="text/css">
     <link rel="stylesheet" href="style/style.css" type="text/css">
 
+    <script src="js/ajax.js"></script>
 
   </head>
-  <body>
+  <body onload="loadItem('ctrl/ctrl.gebruikers.php?gebruiker=read');">
     <div class="row">
+        <ul>
+          <li><li>
+        </ul>
       <div id="content"></div>
     </div>
   </body>
