Added logout function

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
   </head>
   <body onload="loadItem('ctrl/ctrl.gebruikers.php?gebruiker=read');">
     <div class="row">
+      <div class="col-4" onclick="loadItem('ctrl/ctrl.user.php?user=logout');">Logout</div>
         <ul>
           <li><li>
         </ul>
