Fixed logout bug
You couldn’t logout

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
   </head>
   <body onload="loadItem('ctrl/ctrl.gebruikers.php?gebruiker=read');">
     <div class="row">
-      <div class="col-4" onclick="loadItem('ctrl/ctrl.user.php?user=logout');">Logout</div>
+      <div class="col-4"><a href="ctrl/ctrl.user.php?user=logout">Logout</a></div>
         <ul>
           <li><li>
         </ul>
@@ -21,4 +21,3 @@
     </div>
   </body>
 </html>
-<!-- hoi -->
